<?xml version="1.0"?>
<package>
  <name>jbot2_msgs</name>
  <version>2.0.0</version>
  <description>The jbot2_msgs package</description>
  <maintainer email="ebrand0007@gmail.com">Ed Brand</maintainer>
  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
